TM-13937 Initial implementation of refactoring on creating task notes

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -472,6 +472,12 @@
                                     <!-- Toolbar Template -->
                                     <ng-template kendoGridToolbarTemplate [position]="'top'">
                                         <label class="pad-top-2 pad-left-10 mar-bottom-0">Task Notes ({{dataGridTaskNotesHelper.gridData.data.length}})</label>
+                                        <tds-button-add class="button-header-grid float-right"
+                                                        [title]="'Create'"
+                                                        [tooltip]="'Create a note'"
+                                                        [id]="'btnAddNote'"
+                                                        (click)="onCreateNote()">
+                                        </tds-button-add>
                                     </ng-template>
                                     <!-- Columns -->
                                     <kendo-grid-column *ngFor="let column of taskNotesColumnsModel.columns"
