--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/single-note/single-note.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/single-note/single-note.component.html
@@ -26,17 +26,16 @@
 				</div>
 			</div>
 			<div class="modal-footer form-group-center">
+				<tds-button-save class="btn-primary pull-left"
+				                 (click)="onSave()"
+				                 *ngIf="singleNoteModel.modal.type !== modalType.VIEW"
+				                 [disabled]="note.trim() === ''" >
+				</tds-button-save>
+				<tds-button-cancel class="pull-right"
+				                 (click)="cancelCloseDialog()">
+				</tds-button-cancel>
 
-				<button type="button" (click)="onSave()" class="btn btn-primary pull-left"
-				        *ngIf="singleNoteModel.modal.type !== modalType.VIEW"
-				        [disabled]="note.trim() === ''">
-					<span class="fa fa-fw fa-floppy-o"></span> Save
-				</button>
 
-				<button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
-					<span class="glyphicon glyphicon-ban-circle"></span>
-					<span>Cancel</span>
-				</button>
 
 			</div>
 		</div>
