TM-13937 Implement task-notes component

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -309,17 +309,8 @@
                                                         </kendo-dropdownlist>
                                                     </td>
 
-
-
-                                                    <td class="label N edge-cell vertical-note-status" nowrap="nowrap">
-                                                        <label><span>Note</span></label>
-                                                    </td>
-                                                    <td class="valueNW.note" colspan="4">
-                                                        <textarea name="note"
-                                                                  class="note"
-                                                                  placeholder="Enter a new note"
-                                                                  id="note" rows="4" [(ngModel)]="model.note"></textarea>
-                                                    </td>
+                                                    <td></td>
+                                                    <td></td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -461,40 +452,8 @@
                             </tr>
                             <tr class="deps grow-container">
                                 <td colspan="5">
-                                    <kendo-grid
-                                        *ngIf="dataGridTaskNotesHelper"
-                                        class="successor-predecessor-table has-double-assignment"
-                                        [data]="dataGridTaskNotesHelper.gridData"
-                                        [sort]="dataGridTaskNotesHelper.state.sort"
-                                        [sortable]="{mode:'single'}"
-                                        [resizable]="false"
-                                        (sortChange)="dataGridTaskNotesHelper.sortChange($event)">
-                                    <!-- Toolbar Template -->
-                                    <ng-template kendoGridToolbarTemplate [position]="'top'">
-                                        <label class="pad-top-2 pad-left-10 mar-bottom-0">Task Notes ({{dataGridTaskNotesHelper.gridData.data.length}})</label>
-                                        <tds-button-add class="button-header-grid float-right"
-                                                        [title]="'Create'"
-                                                        [tooltip]="'Create a note'"
-                                                        [id]="'btnAddNote'"
-                                                        (click)="onCreateNote()">
-                                        </tds-button-add>
-                                    </ng-template>
-                                    <!-- Columns -->
-                                    <kendo-grid-column *ngFor="let column of taskNotesColumnsModel.columns"
-                                                       field="{{column.property}}"
-                                                       [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
-                                        <!-- Header Template -->
-                                        <ng-template kendoGridHeaderTemplate>
-                                            <label>{{column.label}}</label>
-                                        </ng-template>
-
-                                        <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex" >
-                                            <div class="pad-left-7 pad-bot-6">{{dataItem[column.property]}}</div>
-                                        </ng-template>
-
-                                    </kendo-grid-column>
-                                    <kendo-grid-messages noRecords="There are no records to display."> </kendo-grid-messages>
-                                </kendo-grid>
+	                                <tds-task-notes [dataGridTaskNotesHelper]="dataGridTaskNotesHelper"
+                                                    (create)="modelHelper.onCreateNote()"></tds-task-notes>
                                 </td>
                             </tr>
                         </tbody>
