--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -271,34 +271,8 @@
                             </tr>
                             <tr class="deps grow-container">
                                 <td colspan="5">
-                                    <kendo-grid
-                                        *ngIf="dataGridTaskNotesHelper"
-                                        class="successor-predecessor-table"
-                                        [data]="dataGridTaskNotesHelper.gridData"
-                                        [sort]="dataGridTaskNotesHelper.state.sort"
-                                        [sortable]="{mode:'single'}"
-                                        [resizable]="false"
-                                        (sortChange)="dataGridTaskNotesHelper.sortChange($event)">
-                                    <!-- Toolbar Template -->
-                                    <ng-template kendoGridToolbarTemplate [position]="'top'">
-                                        <label class="pad-top-2 pad-left-10 mar-bottom-0">Task Notes ({{dataGridTaskNotesHelper.gridData.data.length}})</label>
-                                    </ng-template>
-                                    <!-- Columns -->
-                                    <kendo-grid-column *ngFor="let column of taskNotesColumnsModel.columns"
-                                                       field="{{column.property}}"
-                                                       [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
-                                        <!-- Header Template -->
-                                        <ng-template kendoGridHeaderTemplate>
-                                            <label>{{column.label}}</label>
-                                        </ng-template>
-
-                                        <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex" >
-                                            <div class="pad-left-7 pad-bot-6">{{dataItem[column.property]}}</div>
-                                        </ng-template>
-
-                                    </kendo-grid-column>
-                                    <kendo-grid-messages noRecords="There are no records to display."> </kendo-grid-messages>
-                                </kendo-grid>
+                                    <tds-task-notes [dataGridTaskNotesHelper]="dataGridTaskNotesHelper"
+                                                    (create)="modelHelper.onCreateNote()"></tds-task-notes>
                                 </td>
                             </tr>
                         </tbody>
