TM-13938, 13939, 13940 - Fixed ESC handling on many components

--- a/web-app/tds/web-app/app-js/modules/noticeManager/components/view-html/view-html.component.html
+++ b/web-app/tds/web-app/app-js/modules/noticeManager/components/view-html/view-html.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in tds-ui-modal-decorator notice-view-html-content" id="noticeViewHtml" data-backdrop="static" tds-handle-escape (escPressed)="cancelCloseDialog($event)" tabindex="-1" role="dialog">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal fade in tds-ui-modal-decorator notice-view-html-content" id="noticeViewHtml" data-backdrop="static" tds-handle-escape (escPressed)="cancelCloseDialog($event)" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-md" role="document">
 		<div class="modal-content"
 			 tds-ui-modal-decorator=""
