--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/created-license/created-license.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/created-license/created-license.component.html
@@ -1,4 +1,4 @@
-<div class="modal-content data-script-view-edit-component"  #createdLicenseContainer>
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content data-script-view-edit-component"  #createdLicenseContainer>
 	<div class="modal-header">
 		<button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
 		<h4 class="modal-title">{{ 'LICENSE.LICENSE_REQUEST_COMPLETED' | translate }}</h4>
