--- a/web-app/tds/web-app/app-js/modules/licenseAdmin/components/detail/license-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseAdmin/components/detail/license-detail.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus class="modal-content data-script-view-edit-component" >
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content data-script-view-edit-component" >
 	<div class="modal-header">
 		<button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
 		<h4 class="modal-title">{{ 'LICENSE.LICENSE_DETAIL' | translate }}</h4>
