--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -201,6 +201,11 @@
                                                     <!-- Toolbar Template -->
                                                     <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                         <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessors ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
+                                                        <tds-button-add class="button-header-grid float-right"
+                                                                        [tooltip]="'Add Predecessor'"
+                                                                        [id]="'btnAddPredecessor'"
+                                                                        (click)="onAddTaskDependency()">
+                                                        </tds-button-add>
                                                     </ng-template>
                                                     <!-- Columns -->
                                                     <kendo-grid-column *ngFor="let column of taskSuccessorPredecessorColumnsModel.columns"
