--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -202,9 +202,10 @@
                                                     <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                         <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessors ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
                                                         <tds-button-add class="button-header-grid float-right"
-                                                                        [tooltip]="'Add Predecessor'"
+                                                                        title="Create"
+                                                                        [tooltip]="'Create new predecessor task'"
                                                                         [id]="'btnAddPredecessor'"
-                                                                        (click)="onAddTaskDependency()">
+                                                                        (click)="onAddTaskDependency(model.predecessorList, dataGridTaskPredecessorsHelper)">
                                                         </tds-button-add>
                                                     </ng-template>
                                                     <!-- Columns -->
@@ -245,6 +246,12 @@
                                                 <!-- Toolbar Template -->
                                                 <ng-template kendoGridToolbarTemplate [position]="'top'">
                                                     <label class="pad-top-2 pad-left-10 mar-bottom-0">Successors ({{dataGridTaskSuccessorsHelper.gridData.data.length}})</label>
+                                                    <tds-button-add class="button-header-grid float-right"
+                                                                    title="Create"
+                                                                    [tooltip]="'Create new successor task'"
+                                                                    [id]="'btnAddSuccessor'"
+                                                                    (click)="onAddTaskDependency(model.successorList, dataGridTaskSuccessorHelper)">
+                                                    </tds-button-add>
                                                 </ng-template>
                                                 <!-- Columns -->
                                                 <kendo-grid-column *ngFor="let column of taskSuccessorPredecessorColumnsModel.columns"
