TM-13284 - Renamed services to match real purpose - Being able to inject more menu items

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -1,22 +1,14 @@
-<header class="main-header" *ngIf="appSettings">
+<header class="main-header" *ngIf="userContext">
     <nav class="navbar navbar-static-top">
-        <div class="container menu-top-container ${((!isLicenseManagerEnabled)? 'menu-top-container-full-menu' : '')}">
+        <div class="container menu-top-container" [ngClass]="{'menu-top-container-full-menu': userContext.licenseEnabled}">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                LicenseEnabled: {{appSettings.licenseEnabled}}
-                <!--<g:if test="${isLicenseManagerEnabled}">-->
-                    <!--<asset:image id="logo-header" src="images/TMHeaderLogoManager.png" alt="TransitionManager" border="0" />-->
-                <!--</g:if>-->
-                <!--<g:else>-->
-                    <!--<g:if test="${setImage}">-->
-                        <!--<img src="${createLink(controller:'project', action:'showImage', id:setImage)}" alt="${currProject.name} project" style="height: 30px;  margin-top: 8px;"/>-->
-                    <!--</g:if>-->
-                    <!--<g:else>-->
-                        <!--<asset:image id="logo-header" src="images/TMHeaderLogo.png" alt="TransitionManager" border="0" />-->
-                    <!--</g:else>-->
-                <!--</g:else>-->
+                <!-- LOGO -->
+                <img *ngIf="userContext.licenseEnabled && !userContext.imageId" id="logo-header" src="/tdstm/assets/images/TMHeaderLogoManager.png" alt="TransitionManager" border="0" />
+                <img *ngIf="!userContext.licenseEnabled && userContext.imageId" src="/tdstm/project/showImage/{{userContext.imageId}}" alt="${currProject.name} project" style="height: 30px;  margin-top: 8px;"/>
+                <img *ngIf="!userContext.licenseEnabled && !userContext.imageId" id="logo-header" src="/tdstm/assets/images/TMHeaderLogo.png" alt="TransitionManager" border="0" />
             </div>
 
             <!--<g:if test="${isLicenseManagerEnabled}">-->
@@ -24,6 +16,7 @@
             <!--</g:if>-->
             <!--<g:else>-->
                 <!--<g:render template="/layouts/tranmanMenu" model="[currProject:currProject, partyGroup: partyGroup, room:room, moveBundle:moveBundle, moveEvent:moveEvent, isLicenseManagerEnabled:isLicenseManagerEnabled]"  />-->
+            <tds-tranman-menu *ngIf="!userContext.licenseEnabled"></tds-tranman-menu>
             <!--</g:else>-->
 
 
@@ -31,48 +24,46 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- Notifications Menu -->
-                    <!--<li class="dropdown notifications-menu">-->
-                        <!--&lt;!&ndash; Menu toggle button &ndash;&gt;-->
-                        <!--<a href="#" id="nav-project-name" class="dropdown-toggle" data-toggle="dropdown">-->
+                   <li class="dropdown notifications-menu">
+                       <!-- Menu toggle button -->
+                        <a href="#" id="nav-project-name" class="dropdown-toggle" data-toggle="dropdown">
                             <!--<g:if test="${currProject}"> ${currProject.name} </g:if>-->
                             <!--<g:if test="${moveEvent}"> : ${moveEvent.name}</g:if>-->
                             <!--<g:if test="${moveBundle}"> : ${moveBundle.name}</g:if>-->
-                        <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
+                        </a>
+                    </li>
+                    <li>
                         <!--<g:if test="${!isLicenseManagerEnabled}">-->
                             <!--<tds:licenseWarning />-->
                         <!--</g:if>-->
-                    <!--</li>-->
-                    <!--<sec:ifLoggedIn>-->
-                        <!--&lt;!&ndash; User Account Menu &ndash;&gt;-->
-                        <!--<li class="dropdown user user-menu">-->
-                            <!--&lt;!&ndash; Menu Toggle Button &ndash;&gt;-->
-                            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-                                <!--&lt;!&ndash; The user image in the navbar&ndash;&gt;-->
-                                <!--<asset:image src="images/personIcon.png" class="user-image" alt="${session.getAttribute("LOGIN_PERSON").name }" />-->
-                                <!--&lt;!&ndash; hidden-xs hides the username on small devices so only the image appears. &ndash;&gt;-->
-                                <!--<span class="hidden-xs user-name">${tds.currentPersonName()}</span>-->
-                            <!--</a>-->
-                            <!--<ul class="dropdown-menu user-dialog-dropdown-menu">-->
-                                <!--&lt;!&ndash; Menu Body &ndash;&gt;-->
-                                <!--<li class="user-body">-->
-                                    <!--<ul class="list-group">-->
-                                        <!--<li class="list-group-item"><a href="#" style="cursor: pointer;" id="editPersonId" name="${userLogin.username}" onclick="UserPreference.editPerson();return false;"><span class="glyphicon glyphicon-user user-menu-icon-badge"></span> Account Details</a></li>-->
-                                        <!--<li class="list-group-item"><a href="#" style="cursor: pointer;" id="editTimezoneId" name="${userLogin.username}" onclick="UserPreference.editDateAndTimezone();return false;"><span class="glyphicon glyphicon-time user-menu-icon-badge"></span> Date and Timezone</a></li>-->
-                                        <!--<li class="list-group-item"><a href="#" style="cursor: pointer;" id="resetPreferenceId" name="${userLogin.username}" onclick="UserPreference.editPreference();return false;"><span class="glyphicon glyphicon-pencil user-menu-icon-badge"></span> Edit Preferences</a></li>-->
-                                        <!--&lt;!&ndash; <li class="list-group-item"><g:link class="home mmlink" controller="task" action="listUserTasks" params="[viewMode:'mobile',tab:tab]">Use Mobile Site</g:link></li> &ndash;&gt;-->
-                                    <!--</ul>-->
-                                <!--</li>-->
-                                <!--&lt;!&ndash; Menu Footer&ndash;&gt;-->
-                                <!--<li class="user-footer">-->
-                                    <!--<div class="pull-right">-->
-                                        <!--<g:link controller="auth" action="signOut" class="btn btn-default btn-flat"><span class="glyphicon glyphicon-log-out user-menu-icon-badge"></span> Sign Out</g:link>-->
-                                    <!--</div>-->
-                                <!--</li>-->
-                            <!--</ul>-->
-                        <!--</li>-->
-                    <!--</sec:ifLoggedIn>-->
+                    </li>
+
+                    <!-- User Account Menu -->
+                    <li class="dropdown user user-menu">
+                        <!-- Menu Toggle Button -->
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <!-- The user image in the navbar-->
+                            <img src="/tdstm/assets/images/personIcon.png" class="user-image" alt="TDS">
+                            <!-- hidden-xs hides the username on small devices so only the image appears. -->
+                            <span class="hidden-xs user-name">{{userContext.userInfo.username}}</span>
+                        </a>
+                        <ul class="dropdown-menu user-dialog-dropdown-menu">
+                            <!-- Menu Body -->
+                            <li class="user-body">
+                                <ul class="list-group">
+                                    <li class="list-group-item"><a href="#" style="cursor: pointer;"><span class="glyphicon glyphicon-user user-menu-icon-badge"></span> Account Details</a></li>
+                                    <li class="list-group-item"><a href="#" style="cursor: pointer;"><span class="glyphicon glyphicon-time user-menu-icon-badge"></span> Date and Timezone</a></li>
+                                    <li class="list-group-item"><a href="#" style="cursor: pointer;"><span class="glyphicon glyphicon-pencil user-menu-icon-badge"></span> Edit Preferences</a></li>
+                                </ul>
+                            </li>
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                                <div class="pull-right">
+                                    <a href="/tdstm/auth/signOut" class="btn btn-default btn-flat"><span class="glyphicon glyphicon-log-out user-menu-icon-badge"></span> Sign Out</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div><!-- /.navbar-custom-menu -->
         </div><!-- /.container-fluid -->
