--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="main-header" *ngIf="userContext">
     <nav class="navbar navbar-static-top">
-        <div class="container menu-top-container" [ngClass]="{'menu-top-container-full-menu': userContext.licenseEnabled}">
+        <div class="container menu-top-container" [ngClass]="{'menu-top-container-full-menu': !userContext.licenseEnabled}">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                     <i class="fa fa-bars"></i>
