TM-13953 Refactor to resuse saving method

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -284,7 +284,7 @@
                             <tr class="deps grow-container">
                                 <td colspan="5">
                                     <tds-task-notes [dataGridTaskNotesHelper]="dataGridTaskNotesHelper"
-                                                    (create)="modelHelper.onCreateNote()"></tds-task-notes>
+                                                    (create)="createNote()"></tds-task-notes>
                                 </td>
                             </tr>
                         </tbody>
