TM-13284 - Mapped the rest of the elements to the menu so it can jump to the Angular Section. - Also fixed the missing height on load the page

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="main-header" *ngIf="userContext">
+<header class="main-header">
     <nav class="navbar navbar-static-top">
         <div class="container menu-top-container" [ngClass]="{'menu-top-container-full-menu': !userContext.licenseEnabled}">
             <div class="navbar-header">
