--- a/web-app/tds/web-app/app-js/modules/dataScript/components/list/data-script-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataScript/components/list/data-script-list.component.html
@@ -27,16 +27,31 @@
                         </button>
 						<div (click)="reloadDataScripts()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
 					</ng-template>
-					<kendo-grid-column *ngFor="let column of dataScriptColumnModel.columns" field="{{column.property}}" format="{{column.format}}" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
+
+					<!-- Action -->
+					<kendo-grid-command-column [width]="108" [locked]="true">
 						<ng-template kendoGridHeaderTemplate>
-							<label [ngClass]="{'action-header':column.type === 'action'}"> {{column.label}}</label>
+							<div class="text-center">
+								<label class="action-header"> {{ 'GLOBAL.ACTION' | translate }} </label>
+							</div>
 						</ng-template>
-						<ng-template kendoGridCellTemplate *ngIf="column.type === 'action'" let-dataItem>
+						<ng-template kendoGridCellTemplate
+						             let-dataItem
+						             let-rowIndex="rowIndex">
 							<div class="text-center">
 								<button class="btn btn-default" (click)="onEditDataScript(dataItem)"><span class="glyphicon glyphicon-pencil"></span></button>
 								<button class="btn btn-default" (click)="onDeleteDataScript(dataItem)"><span class="fa fa-fw fa-trash"></span></button>
 							</div>
 						</ng-template>
+					</kendo-grid-command-column>
+
+
+					<!-- Configured View Columns (*ngFor) -->
+					<kendo-grid-column *ngFor="let column of gridColumns" field="{{column.property}}" format="{{column.format}}" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
+						<ng-template kendoGridHeaderTemplate>
+							<label> {{column.label}}</label>
+						</ng-template>
+
 						<ng-template kendoGridFilterCellTemplate let-filter>
 							<div class="has-feedback" *ngIf="column.property && column.type !== 'action'" style="margin-bottom:0px;">
 								<div *ngIf="column.type === 'date'; then dateFilter else stringFilter"></div>
