TM-14052 Fix Tasks with Planned Statuses are almost imperceptible in the PRED or SUCC tables of other tasks in New Task Edit
Make planned color equal to the color used in legacy

--- a/web-app/tds/web-app/css/base/taskstatus-mixins.sass
+++ b/web-app/tds/web-app/css/base/taskstatus-mixins.sass
@@ -10,7 +10,7 @@
 
 @mixin task-planned
   background-color: $color-task-planned-bg--white !important
-  color: $color--grey
+  color: gray
   font-weight: bold
 
 @mixin task-pending
