--- a/web-app/tds/web-app/app-js/modules/dataScript/components/view-edit/data-script-view-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataScript/components/view-edit/data-script-view-edit.component.html
@@ -16,9 +16,9 @@
 							</label>
 							<div class="col-sm-9" *ngIf="modalType !== actionTypes.VIEW">
 								<kendo-dropdownlist #dataScriptProvider id="dataScriptProvider" name="dataScriptProvider" class="form-control" [data]="providerList"
-								 [textField]="'name'" [valueField]="'id'" [(ngModel)]="dataScriptModel.provider" required
+								 [textField]="'name'" [valueField]="'id'" [defaultItem]="dataScriptModel.provider" [(ngModel)]="dataScriptModel.provider" required
 								 class="form-control"
-								 [ngClass]="{'has-error': dataScriptForm.touched && !dataScriptModel.provider.id}"></kendo-dropdownlist>
+								 [ngClass]="{'has-error': dataScriptForm.touched && dataScriptModel.provider && !dataScriptModel.provider.id}"></kendo-dropdownlist>
 							</div>
 							<div class="col-sm-9" *ngIf="modalType === actionTypes.VIEW">
 								<label class="control-label label-detail">{{dataScriptModel.provider.name}}</label>
@@ -80,7 +80,7 @@
 	</div>
 	<div class="modal-footer form-group-center">
 		<button type="button" *ngIf="modalType === actionTypes.EDIT || modalType === actionTypes.CREATE" (click)="onSaveDataScript()"
-		 class="btn btn-primary pull-left" [disabled]="!dataScriptForm.form.valid || !isUnique || !dataScriptModel.provider.id">
+		 class="btn btn-primary pull-left" [disabled]="!dataScriptForm.form.valid || !isUnique || (dataScriptModel.provider && !dataScriptModel.provider.id)">
 			<span class="fa fa-fw fa-floppy-o"></span> Save</button>
 		<button type="button" *ngIf="modalType === actionTypes.VIEW" (click)="changeToEditDataScript()" class="btn btn-primary pull-left">
 			<span class="glyphicon glyphicon-pencil"></span> Edit</button>
